--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>{{ 'app.title'|trans }}</h1>
+    <h1>{{ 'homepage.title'|trans }}</h1>
     <hr />
     <div class="row">
     {% for underware in underwares %}
@@ -14,7 +14,7 @@
                     <p>{{ underware.description }}</p>
                 </div>
                 <div class="panel-footer text-right">
-                    {{ 'wore_since'|transchoice(underware.feature.woreDuration, {
+                    {{ 'underwar.wore_since'|transchoice(underware.feature.woreDuration, {
                         '%label%': '<span class="label label-primary">'~ underware.feature.woreDuration ~'</span>'
                     })|raw }}
                 </div>
